# golosovoy_bot

hybrid/: hybrid.ipynb  key_server.env  main.py  prompt_golosovoy_bot.txt  pyproject.toml
stt_models_test/: gigaam-rnnt.ipynb  key.env  pyproject.toml  t_one.ipynb  vikhr_borealis.ipynb  whisper_turbo_large.ipynb  whisper_v3_finetune.ipynb
stt_models_test/src/stt_models_test/: __init__.py
voices/: voice_2_flac.flac
