[project]
name = "stt-models-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ppwwrr", email = "fedorovaksenei@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
]

[project.scripts]
stt-models-test = "stt_models_test:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
